수강편람 업데이트(2012-2)

--- a/data/htm/2012_2_basics_foreign.htm
+++ b/data/htm/2012_2_basics_foreign.htm
@@ -420,7 +420,7 @@
 <td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-104&nbsp;</td>
-<td class="pstyle2">유명숙&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -433,7 +433,7 @@
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-104&nbsp;</td>
-<td class="pstyle2">유명숙&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1176,7 +1176,7 @@
 <td class="pstyle2">003-212&nbsp;</td>
 <td class="pstyle2">Dara Anthony Sheahan&nbsp;</td>
 <td class="pstyle2">2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.003B&nbsp;</td>
@@ -1189,7 +1189,7 @@
 <td class="pstyle2">003-212&nbsp;</td>
 <td class="pstyle2">Dara Anthony Sheahan&nbsp;</td>
 <td class="pstyle2">2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.004A&nbsp;</td>
@@ -3615,9 +3615,9 @@
 <td class="pstyle2">초급독일어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">월&nbsp;1.5-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-603&nbsp;</td>
+<td class="pstyle2">월&nbsp;8,8,1.5-1.5&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">002-408&nbsp;</td>
 <td class="pstyle2">김화경&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3641,9 +3641,9 @@
 <td class="pstyle2">초급독일어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">월&nbsp;4.5-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-603&nbsp;</td>
+<td class="pstyle2">월&nbsp;9,9,4.5-1.5&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">002-213&nbsp;</td>
 <td class="pstyle2">명정&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3667,9 +3667,9 @@
 <td class="pstyle2">초급독일어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-603&nbsp;</td>
+<td class="pstyle2">월&nbsp;10,10,6-1.5&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">002-213&nbsp;</td>
 <td class="pstyle2">권혁준&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3706,7 +3706,7 @@
 <td class="pstyle2">초급독일어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">수&nbsp;4.5-1.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;4.5-1.5,9,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">002-110&nbsp;</td>
 <td class="pstyle2">송석희&nbsp;</td>
@@ -3719,9 +3719,9 @@
 <td class="pstyle2">초급독일어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-603&nbsp;</td>
+<td class="pstyle2">화&nbsp;8,8,1.5-1.5&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">002-408&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3758,6 +3758,19 @@
 <td class="pstyle2">초급독일어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">수&nbsp;10,10&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">002-213&nbsp;</td>
+<td class="pstyle2">구명철&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.030B&nbsp;</td>
+<td class="pstyle2">006&nbsp;</td>
+<td class="pstyle2">초급독일어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
 <td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">083-603&nbsp;</td>
@@ -3784,9 +3797,9 @@
 <td class="pstyle2">초급독일어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">목&nbsp;4.5-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-603&nbsp;</td>
+<td class="pstyle2">목&nbsp;9,9,4.5-1.5&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">002-213&nbsp;</td>
 <td class="pstyle2">윤종욱&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3810,9 +3823,9 @@
 <td class="pstyle2">초급독일어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-603&nbsp;</td>
+<td class="pstyle2">목&nbsp;10,10,6-1.5&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">002-213&nbsp;</td>
 <td class="pstyle2">천미애&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3823,9 +3836,9 @@
 <td class="pstyle2">초급독일어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">화&nbsp;7.5-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-603&nbsp;</td>
+<td class="pstyle2">화&nbsp;10,10,7.5-1.5&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">002-213&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3871,6 +3884,19 @@
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.031B&nbsp;</td>
+<td class="pstyle2">001&nbsp;</td>
+<td class="pstyle2">초급독일어 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;3,3&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">003-105&nbsp;</td>
+<td class="pstyle2">윤순식&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.031B&nbsp;</td>
 <td class="pstyle2">002&nbsp;</td>
 <td class="pstyle2">초급독일어 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
@@ -3897,13 +3923,26 @@
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.031B&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">초급독일어 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;4,4&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">003-105&nbsp;</td>
+<td class="pstyle2">홍진호&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.031B&nbsp;</td>
 <td class="pstyle2">003&nbsp;</td>
 <td class="pstyle2">초급독일어 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">화&nbsp;6-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">010-108&nbsp;</td>
+<td class="pstyle2">화&nbsp;9,9,6-1.5&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">002-213&nbsp;</td>
 <td class="pstyle2">양태규&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -6263,6 +6302,19 @@
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.097&nbsp;</td>
+<td class="pstyle2">001&nbsp;</td>
+<td class="pstyle2">중급독일어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;6&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">003-109&nbsp;</td>
+<td class="pstyle2">김태환&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.097&nbsp;</td>
 <td class="pstyle2">002&nbsp;</td>
 <td class="pstyle2">중급독일어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
@@ -6283,6 +6335,19 @@
 <td class="pstyle2">목&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">010-108&nbsp;</td>
+<td class="pstyle2">최영진&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.097&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">중급독일어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;7&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">003-109&nbsp;</td>
 <td class="pstyle2">최영진&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -6309,6 +6374,19 @@
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">014-120&nbsp;</td>
+<td class="pstyle2">김태환&nbsp;</td>
+<td class="pstyle2">20&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.098&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">중급독일어 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;8&nbsp;</td>
+<td class="pstyle2">실험반2&nbsp;</td>
+<td class="pstyle2">003-109&nbsp;</td>
 <td class="pstyle2">김태환&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
