--- a/data/htm/2012_2_basics_korean.htm
+++ b/data/htm/2012_2_basics_korean.htm
@@ -1384,7 +1384,7 @@
 <td class="pstyle2">001-209&nbsp;</td>
 <td class="pstyle2">김선효&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.001&nbsp;</td>
@@ -1397,7 +1397,7 @@
 <td class="pstyle2">001-209&nbsp;</td>
 <td class="pstyle2">김선효&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.001&nbsp;</td>
