--- a/data/htm/2012_2_basics_science.htm
+++ b/data/htm/2012_2_basics_science.htm
@@ -58,7 +58,7 @@
 <td class="pstyle2">024-112&nbsp;</td>
 <td class="pstyle2">김영득&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.090&nbsp;</td>
@@ -71,7 +71,7 @@
 <td class="pstyle2">024-112&nbsp;</td>
 <td class="pstyle2">김영득&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.090&nbsp;</td>
@@ -84,7 +84,7 @@
 <td class="pstyle2">024-112&nbsp;</td>
 <td class="pstyle2">김영득&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.101&nbsp;</td>
@@ -1408,7 +1408,7 @@
 <td class="pstyle2">화&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-304&nbsp;</td>
-<td class="pstyle2">정경훈&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1421,103 +1421,103 @@
 <td class="pstyle2">목&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">43-1-304&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.106&nbsp;</td>
+<td class="pstyle2">004&nbsp;</td>
+<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">500-L307&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.106&nbsp;</td>
+<td class="pstyle2">004&nbsp;</td>
+<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">500-L307&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.106&nbsp;</td>
+<td class="pstyle2">005&nbsp;</td>
+<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">500-L311&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.106&nbsp;</td>
+<td class="pstyle2">005&nbsp;</td>
+<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">500-L311&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.106&nbsp;</td>
+<td class="pstyle2">006&nbsp;</td>
+<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">025-101&nbsp;</td>
+<td class="pstyle2">김지영&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.106&nbsp;</td>
+<td class="pstyle2">006&nbsp;</td>
+<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">025-101&nbsp;</td>
+<td class="pstyle2">김지영&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.106&nbsp;</td>
+<td class="pstyle2">007&nbsp;</td>
+<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">025-105&nbsp;</td>
 <td class="pstyle2">정경훈&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.106&nbsp;</td>
-<td class="pstyle2">004&nbsp;</td>
-<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L307&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">50&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.106&nbsp;</td>
-<td class="pstyle2">004&nbsp;</td>
-<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L307&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">50&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.106&nbsp;</td>
-<td class="pstyle2">005&nbsp;</td>
-<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;3-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L311&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">50&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.106&nbsp;</td>
-<td class="pstyle2">005&nbsp;</td>
-<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;3-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">500-L311&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">50&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.106&nbsp;</td>
-<td class="pstyle2">006&nbsp;</td>
-<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">025-101&nbsp;</td>
-<td class="pstyle2">김지영&nbsp;</td>
-<td class="pstyle2">50&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.106&nbsp;</td>
-<td class="pstyle2">006&nbsp;</td>
-<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">025-101&nbsp;</td>
-<td class="pstyle2">김지영&nbsp;</td>
-<td class="pstyle2">50&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.106&nbsp;</td>
-<td class="pstyle2">007&nbsp;</td>
-<td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">025-105&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">50&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.106&nbsp;</td>
 <td class="pstyle2">007&nbsp;</td>
 <td class="pstyle2">생명과학을 위한 수학 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
@@ -1525,7 +1525,7 @@
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">025-105&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정경훈&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2137,45 +2137,6 @@
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">028-303&nbsp;</td>
 <td class="pstyle2">김남중&nbsp;</td>
-<td class="pstyle2">80&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.116&nbsp;</td>
-<td class="pstyle2">003&nbsp;</td>
-<td class="pstyle2">물리학&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;3&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">028-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">80&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.116&nbsp;</td>
-<td class="pstyle2">003&nbsp;</td>
-<td class="pstyle2">물리학&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;3&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">028-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">80&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.116&nbsp;</td>
-<td class="pstyle2">003&nbsp;</td>
-<td class="pstyle2">물리학&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">금&nbsp;3&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">028-303&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4270,7 +4231,7 @@
 <td class="pstyle2">056-321&nbsp;</td>
 <td class="pstyle2">박영우&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.149&nbsp;</td>
@@ -4283,7 +4244,7 @@
 <td class="pstyle2">056-321&nbsp;</td>
 <td class="pstyle2">박영우&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">010.152&nbsp;</td>
