--- a/data/htm/2012_2_core_art.htm
+++ b/data/htm/2012_2_core_art.htm
@@ -355,7 +355,7 @@
 <td class="pstyle2">화&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-103&nbsp;</td>
-<td class="pstyle2">변창구&nbsp;</td>
+<td class="pstyle2">유명숙&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -368,7 +368,7 @@
 <td class="pstyle2">목&nbsp;3-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-103&nbsp;</td>
-<td class="pstyle2">변창구&nbsp;</td>
+<td class="pstyle2">유명숙&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
