--- a/data/htm/2012_2_core_history.htm
+++ b/data/htm/2012_2_core_history.htm
@@ -394,7 +394,7 @@
 <td class="pstyle2">화&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">005-101&nbsp;</td>
-<td class="pstyle2">허남진&nbsp;</td>
+<td class="pstyle2">정원재&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -407,7 +407,7 @@
 <td class="pstyle2">목&nbsp;1.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">005-101&nbsp;</td>
-<td class="pstyle2">허남진&nbsp;</td>
+<td class="pstyle2">정원재&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
