--- a/data/htm/2012_2_core_society.htm
+++ b/data/htm/2012_2_core_society.htm
@@ -334,6 +334,19 @@
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">025.015&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">현대국가와 행정&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2"> - &nbsp;</td>
+<td class="pstyle2">정용덕&nbsp;</td>
+<td class="pstyle2">100&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">025.016A&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">정치의 사상적 기초&nbsp;</td>
