--- a/data/htm/2012_2_normal_history.htm
+++ b/data/htm/2012_2_normal_history.htm
@@ -992,7 +992,7 @@
 <td class="pstyle2">수&nbsp;1,2&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">005-101&nbsp;</td>
-<td class="pstyle2">정희찬&nbsp;</td>
+<td class="pstyle2">정미성&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1395,7 +1395,7 @@
 <td class="pstyle2">금&nbsp;6,7,8&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-102&nbsp;</td>
-<td class="pstyle2">장원태&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">80&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
