--- a/data/htm/2012_2_normal_special.htm
+++ b/data/htm/2012_2_normal_special.htm
@@ -58,7 +58,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">양승국&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -71,7 +71,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">방민호&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -84,7 +84,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">류종목&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -97,7 +97,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">이건우&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -110,7 +110,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">고원&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -123,7 +123,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">권재일&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -136,7 +136,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">이호영&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -149,7 +149,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">Hejtmanek Milan&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -162,7 +162,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">박찬국&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -175,7 +175,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">김종서&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -188,7 +188,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">이연승&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -201,7 +201,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">박낙규&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -214,7 +214,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">Peter W. Milne&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -227,7 +227,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">윤영관&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -240,7 +240,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">임요한&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -253,7 +253,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">이상각&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -266,7 +266,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">채종철&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -279,7 +279,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">Masateru Ishiguro&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -292,7 +292,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">정가진&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -305,7 +305,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">홍성욱&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -318,7 +318,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">이창복&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -331,7 +331,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">이경우&nbsp;</td>
 <td class="pstyle2">16&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -344,7 +344,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">박은수&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -357,7 +357,7 @@
 <td class="pstyle2">032-201&nbsp;</td>
 <td class="pstyle2">나용수&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -370,7 +370,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">정진철&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -383,7 +383,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">김한호&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -396,7 +396,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">김완배&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -409,7 +409,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">Hong Sok(Brian) Kim&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -422,7 +422,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">허보윤&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -435,7 +435,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">김형숙&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -448,7 +448,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">백순근&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -461,7 +461,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">우한용&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -474,7 +474,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">박재학&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -487,7 +487,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">김용백&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -500,7 +500,7 @@
 <td class="pstyle2">029-106&nbsp;</td>
 <td class="pstyle2">이정원&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -513,7 +513,7 @@
 <td class="pstyle2">083-201&nbsp;</td>
 <td class="pstyle2">이정상&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -526,7 +526,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">손환철&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -539,7 +539,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">박중신&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -552,7 +552,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">구승엽&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -565,7 +565,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">윤영호&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -578,7 +578,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">Eli Park Sorensen&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -591,7 +591,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">박태균&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.001&nbsp;</td>
@@ -604,7 +604,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">김현정&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.002&nbsp;</td>
@@ -981,7 +981,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.030&nbsp;</td>
@@ -994,7 +994,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.030&nbsp;</td>
@@ -1007,7 +1007,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.030&nbsp;</td>
@@ -1020,7 +1020,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.030&nbsp;</td>
@@ -1033,7 +1033,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.030&nbsp;</td>
@@ -1046,7 +1046,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.030&nbsp;</td>
@@ -1059,7 +1059,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.030&nbsp;</td>
@@ -1072,7 +1072,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.030&nbsp;</td>
@@ -1085,7 +1085,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.030&nbsp;</td>
@@ -1098,7 +1098,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.030&nbsp;</td>
@@ -1111,7 +1111,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.031&nbsp;</td>
@@ -1124,7 +1124,7 @@
 <td class="pstyle2">-&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">3&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<td class="pstyle2">수강제한&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
 <td class="pstyle2">009.032&nbsp;</td>
@@ -1265,7 +1265,7 @@
 <td class="pstyle2">화&nbsp;6,7,5&nbsp;</td>
 <td class="pstyle2">실기&nbsp;</td>
 <td class="pstyle2">071-403&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김은경&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1291,7 +1291,7 @@
 <td class="pstyle2">금&nbsp;5,6,7&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">071-403&nbsp;</td>
-<td class="pstyle2">나영일&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
