--- a/data/htm/2012_2_core_technology.htm
+++ b/data/htm/2012_2_core_technology.htm
@@ -264,7 +264,7 @@
 <td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">024-210&nbsp;</td>
-<td class="pstyle2">박태성&nbsp;</td>
+<td class="pstyle2">오희석&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -277,7 +277,7 @@
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">024-210&nbsp;</td>
-<td class="pstyle2">박태성&nbsp;</td>
+<td class="pstyle2">오희석&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
